# Amizade

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  meson.build
.github/workflows/: ci.yml
amizade/: Cargo.toml  meson_options.txt
amizade/build-aux/: club.barretts.Amizade.Devel.json
amizade/data/: club.barretts.Amizade.desktop.in.in  club.barretts.Amizade.desktop.in.in.orig  club.barretts.Amizade.gschema.xml.in.orig  club.barretts.Amizade.metainfo.xml.in.in  club.barretts.Amizade.metainfo.xml.in.in.orig
amizade/data/icons/: club.barretts.Amizade-symbolic.svg.orig  club.barretts.Amizade.svg.orig
amizade/po/: POTFILES.in
amizade/src/: main.rs  setup.rs
amizade/src/modals/: about.rs
data/: club.barretts.Amizade.desktop.in.in  club.barretts.Amizade.gschema.xml.in  club.barretts.Amizade.metainfo.xml.in.in
data/resources/: resources.gresource.xml
ocs-custodian/: Cargo.toml
ocs-custodian/src/: handler.rs  installer.rs  lib.rs  parser.rs  types.rs
ocs-custodian/src/handler/: tests.rs
ocs-custodian/src/installer/: tests.rs
ocs-custodian/src/tests/: install_type_tests.rs  mod.rs  parser_tests.rs  test_helpers.rs
ocs-custodian/src/types/: install_type.csv  install_type.rs
src/: app.rs  main.rs
yoink-ocs/: Cargo.toml
