[package]
name = "amizade"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# adw = { version = "0.3.1", package = "libadwaita", features = ["v1_3"] }
# gtk = { version = "0.5.0", package = "gtk4", features = ["v4_10"] }
relm4 = {version = "0.5.0", features = ["libadwaita"]}
relm4-components = "0.5.0"

